# python-project-skeleton

./: README.md  pyproject.toml  setup.py
mynamespace/mypackage/: __init__.py  cmdline.py  factorial.py  test_factorial.py
