[build-system]
requires = ["flit_core >=3.2,<4", "overrides>=1.8", "pytest-runner", "pytest"]
build-backend = "flit_core.buildapi"

[project]
name = "mynamespace.mypackage"
authors = [{name = "David Tolpin", email = "david.tolpin@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/dtolpin/python-project-skeleton"
